schedule.css
@import url('https://fonts.googleapis.com/css?family=Raleway');
@import url('https://fonts.googleapis.com/css?family=Lato');

.apa-reference {
    padding-left: 36px;
    text-indent: -36px;
}

.navbar {
    background-color: #1a9988;
    min-height: 48px;
    position: sticky;
    position: -webkit-sticky;
    top: 0;
}

.navbar a {
    color: white;
    display: block;
    float: left;
    font-family: 'Raleway';
    font-size: 16px;
    padding: 14px 18px;
    text-align: center;
    text-decoration: none;
}

.navbar a:hover {
    background-color: #157c6f;
}

.dropdown {
    float: left;
    overflow: hidden;
}

.dropdown .dropbtn {
    background-color: inherit;
    border: none;
    color: white;
    font-family: inherit;
    margin: 0px;
    max-height: 48px;
    outline: none;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 140px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: black;
    display: block;    
    float: none;
    padding: 12px 16px;
    text-decoration: none;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
    display: block;
}


body {
    background-color: #e9edee;
    font-family: 'Lato';
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 10px;
}

h1, h2 {
    font-family: 'Raleway';
    text-align: center;
}

hr {
    background: #000000;
    color: #000000;
    height: 3px;
}

iframe {
    display: block;
    margin: auto;
}

img {
    object-fit: cover;
}

table {
    border: 0px;
    border-collapse: separate;
    border-spacing: 5px;
    width: 100%;
}

td {
    text-align: center;
    padding: 10px;
    vertical-align: top
}

th {
    text-align: center;
}

